<resources>
    <string name="app_name">CalcTrip</string>
    <string name="title">🚗 Calculadora de Viagem</string>
    <string name="total_distance">Distância a ser percorrida</string>
    <string name="total_distance_label">Total de KM</string>
    <string name="gas_price">Valor do Combustível</string>
    <string name="gas_price_by_liter_label">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="autonomy_label">KM´s por Litro</string>
    <string name="calculate_button">Distância a ser percorrida</string>
    <string name="prefix_price">R$</string>
    <string name="total_price">1000,00</string>
    <string name="result_label">Esse será seu gasto na viagem</string>
</resources>