<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".MainActivity">

    <LinearLayout style="@style/contentTop">

        <TextView
            style="@style/titleText"
            android:text="@string/title" />

        <EditText
            android:id="@+id/total_distance"
            style="@style/inputText"
            android:hint="@string/total_distance" />

        <TextView
            style="@style/labelText"
            android:text="@string/total_distance_label" />

        <EditText
            android:id="@+id/gas_price"
            style="@style/inputText"
            android:hint="@string/gas_price" />

        <TextView
            style="@style/labelText"
            android:text="@string/gas_price_by_liter_label" />

        <EditText
            android:id="@+id/autonomy"
            style="@style/inputText"
            android:hint="@string/autonomy" />

        <TextView
            style="@style/labelText"
            android:text="@string/autonomy_label" />

        <Button
            android:id="@+id/calculate_button"
            style="@style/button"
            android:hint="@string/calculate_button" />
    </LinearLayout>

    <LinearLayout style="@style/contentBottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/resultTextPrefix"
                android:layout_height="match_parent"
                android:text="@string/prefix_price" />

            <TextView
                android:id="@+id/total_price"
                style="@style/resultText"
                android:text="@string/total_price" />
        </LinearLayout>

        <TextView
            style="@style/resultLabel"
            android:text="@string/result_label" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>